add shared mixin

--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -39,7 +39,7 @@
 	  <None Remove="Service\TestApp\assets\js\httpVueLoader.js" />
 	  <None Remove="Service\TestApp\assets\js\lodash.min.js" />
 	  <None Remove="Service\TestApp\assets\js\vuex.min.js" />
-	  <None Remove="Service\TestApp\vue\src\shared.js" />
+	  <None Remove="Service\TestApp\vue\src\shared-mixin.js" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -66,7 +66,7 @@
 		<EmbeddedResource Include="Service\TestApp\vue\src\components\parameter-value.vue" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\filters\string-filter.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\index.js" />
-		<EmbeddedResource Include="Service\TestApp\vue\src\shared.js" />
+		<EmbeddedResource Include="Service\TestApp\vue\src\shared-mixin.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\store\index.store.js" />
 	</ItemGroup>
 	<ItemGroup>
