--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,13 +68,13 @@
     - ps: .\tools\Appveyor\install_dotnet_devpack.ps1
   before_build:
     - dotnet restore .\Routine.sln
-    - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory tools
+    - nuget install NUnit.Runners -Version 3.10.0 -OutputDirectory tools
     - choco install opencover.portable
     - choco install codecov
   build_script:
     - dotnet build .\Routine.sln
   test_script:
-    - OpenCover.Console.exe -register:user -target:.\tools\NUnit.Runners.2.6.4\tools\nunit-console.exe -targetargs:".\test\Routine.Test\bin\Release\net48\Routine.Test.dll -noshadow" -filter:"+[Routine*]* -[Routine.Test*]*" -output:".\routine_coverage.xml"
+    - OpenCover.Console.exe -register:administrator -target:.\tools\NUnit.ConsoleRunner.3.10.0\tools\nunit3-console.exe -targetargs:".\test\Routine.Test\bin\Release\net48\Routine.Test.dll -noshadow" -filter:"+[Routine*]* -[*.Test]*" -output:".\routine_coverage.xml"
     - codecov -f "routine_coverage.xml"
   #test:
   #  assemblies:
