--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,13 +18,9 @@
     - dotnet build .\Routine.sln
   test_script:
     - OpenCover.Console.exe -register:administrator -target:".\tools\NUnit.ConsoleRunner.3.10.0\tools\nunit3-console.exe" -targetargs:".\test\Routine.Test\bin\Release\net48\Routine.Test.dll" -filter:"+[Routine*]* -[*.Test]*" -output:".\routine_coverage.xml"
-    - $wc = New-Object 'System.Net.WebClient'
-    - $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit3/$($env:APPVEYOR_JOB_ID)",(Resolve-Path .\TestResult.xml))
+    - ps: $wc = New-Object 'System.Net.WebClient'
+    - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit3/$($env:APPVEYOR_JOB_ID)",(Resolve-Path .\TestResult.xml))
     - codecov -f "routine_coverage.xml"
-  test:
-    assemblies:
-      only:
-        - Routine.Test.dll
   after_test:
     - ps: .\src\Routine\Scripts\BuildNugetPackage.ps1
 
@@ -58,13 +54,9 @@
     - dotnet build .\Routine.sln
   test_script:
     - OpenCover.Console.exe -register:administrator -target:".\tools\NUnit.ConsoleRunner.3.10.0\tools\nunit3-console.exe" -targetargs:".\test\Routine.Test\bin\Release\net48\Routine.Test.dll" -filter:"+[Routine*]* -[*.Test]*" -output:".\routine_coverage.xml"
-    - $wc = New-Object 'System.Net.WebClient'
-    - $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit3/$($env:APPVEYOR_JOB_ID)",(Resolve-Path .\TestResult.xml))
+    - ps: $wc = New-Object 'System.Net.WebClient'
+    - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit3/$($env:APPVEYOR_JOB_ID)",(Resolve-Path .\TestResult.xml))
     - codecov -f "routine_coverage.xml"
-  test:
-    assemblies:
-      only:
-        - Routine.Test.dll
 
 # configuration for all other branches except "master" and "develop"
 # build in Debug mode and deploy locally for testing
@@ -88,10 +80,6 @@
     - ps: $wc = New-Object 'System.Net.WebClient'
     - ps: $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit3/$($env:APPVEYOR_JOB_ID)",(Resolve-Path .\TestResult.xml))
     - codecov -f "routine_coverage.xml"
-  #test:
-  #  assemblies:
-  #    only:
-  #      - Routine.Test.dll
   after_test:
     - ps: .\src\Routine\Scripts\BuildNugetPackage.ps1
 
