Routine.Samples.SmartObject is converted to .net 5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "**/.vs":true,
         "**/bin":true,
         "**/obj":true,
-        // "**/*.csproj":true,
+        "**/*.csproj.*":true,
         "**/.github":true
     }
 }
