--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -14,4 +14,9 @@
 	<ItemGroup>
 		<EmbeddedResource Include="Service\TestApp\**\*.*" />
 	</ItemGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>Routine.Test</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
