--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -16,4 +16,7 @@
 			<_Parameter1>Routine.Test</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
+	</ItemGroup>
 </Project>
