--- a/test/Routine.Test.Performance/Routine.Test.Performance.csproj
+++ b/test/Routine.Test.Performance/Routine.Test.Performance.csproj
@@ -18,6 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="fasterflect" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.6" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
