--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,8 +24,4 @@ jobs:
         run: dotnet test --no-build --verbosity normal
       - uses: codecov/codecov-action@v2
         with:
-          files: ./coverage1.xml,./coverage2.xml # optional
-          flags: unittests # optional
-          name: codecov-umbrella # optional
-          fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)
+          files: ./lib.c.gcov
