--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,18 +22,12 @@ jobs:
         run: dotnet build --no-restore
       - name: Test
         run: dotnet test --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
-      - name: Generate coverage report
-        run: |
-          pip install pytest
-          pip install pytest-cov
-          pytest --cov=./ --cov-report=xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
+      - name: Code Coverage Summary Report
+        uses: 5monkeys/cobertura-action@master
         with:
-          directory: ./coverage/reports/
-          env_vars: OS,PYTHON
-          fail_ci_if_error: true
-          flags: unittests
-          name: codecov-umbrella
-          path_to_write_report: ./coverage/codecov_report.txt
-          verbose: true
+          path: ${{ github.workspace }}/test/Routine.Test/coverage.cobertura.xml
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_covered : false
+          only_changed_files : true
+          minimum_coverage: 10
+          report_name : Coverage_Report
