--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
+		<Version>0.9.0</Version>
+		<Authors>inventiv</Authors>
+		<Company>Multinet Teknoloji A.S.</Company>
 	</PropertyGroup>
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
