--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
     branches: [develop]
 
 jobs:
-  build:
+  one:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,6 +31,7 @@ jobs:
           skip_covered : false
           only_changed_files : true
       - name: Publish Routine to Nuget
+        if: eq(variables['Build.SourceBranch'], 'refs/heads/develop')
         uses: brandedoutcast/publish-nuget@v2.5.2
         with:
             PROJECT_FILE_PATH: src/Routine/Routine.csproj
