--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
           skip_covered : false
           only_changed_files : true
       - name: Publish Routine to Nuget
-        if: eq(variables['Build.SourceBranch'], 'refs/heads/develop')
+        if: ${{ github.ref == 'refs/heads/develop' }}
         uses: brandedoutcast/publish-nuget@v2.5.2
         with:
             PROJECT_FILE_PATH: src/Routine/Routine.csproj
