--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,11 @@ name: .NET
 
 on:
   push:
-    branches: [develop]
+    branches: 
+    - 'releases/**'
   pull_request:
-    branches: [develop]
+    branches: 
+    - develop
 
 jobs:
   one:
@@ -31,7 +33,7 @@ jobs:
           skip_covered : false
           only_changed_files : true
       - name: Publish Routine to Nuget
-        if: ${{ github.ref == 'refs/heads/develop' }}
+        if: ${{ contains(github.ref, 'release') }}
         uses: brandedoutcast/publish-nuget@v2.5.2
         with:
             PROJECT_FILE_PATH: src/Routine/Routine.csproj
