--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,12 +1,10 @@
 name: .NET
 
 on:
-  push:
-    branches: 
-    - 'releases/**'
   pull_request:
-    branches: 
-    - develop
+    branches:
+      - develop
+      - master
 
 jobs:
   one:
@@ -30,12 +28,11 @@ jobs:
           path: ${{ github.workspace }}/test/*/coverage.cobertura.xml
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           minimum_coverage: 70
-          skip_covered : false
-          only_changed_files : true
+          skip_covered: false
+          only_changed_files: true
       - name: Publish Routine to Nuget
-        if: ${{ contains(github.ref, 'release') }}
+        if: ${{ github.base_ref == 'refs/heads/main' }}
         uses: brandedoutcast/publish-nuget@v2.5.2
         with:
-            PROJECT_FILE_PATH: src/Routine/Routine.csproj
-            NUGET_KEY: ${{secrets.NUGET_API_KEY}}
-
+          PROJECT_FILE_PATH: src/Routine/Routine.csproj
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
