--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,9 @@
 name: .NET
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - develop
@@ -31,7 +34,7 @@ jobs:
           skip_covered: false
           only_changed_files: true
       - name: Publish Routine to Nuget
-        if: ${{ github.base_ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: brandedoutcast/publish-nuget@v2.5.2
         with:
           PROJECT_FILE_PATH: src/Routine/Routine.csproj
