--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,12 @@
 name: .NET
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - develop
-      - master
 
 jobs:
   one:
@@ -31,7 +33,7 @@ jobs:
           skip_covered: false
           only_changed_files: true
       - name: Publish Routine to Nuget
-        if: ${{ github.ref == 'refs/heads/develop' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         uses: brandedoutcast/publish-nuget@v2.5.2
         with:
           PROJECT_FILE_PATH: src/Routine/Routine.csproj
