--- a/samples/Routine.Samples.SmartObject/Properties/launchSettings.json
+++ b/samples/Routine.Samples.SmartObject/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:30580",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:55094/",
+      "sslPort": 44341
     }
   },
   "profiles": {
@@ -17,12 +17,12 @@
     },
     "Routine.Samples.SmartObject": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
