--- a/test/Routine.Test/Routine.Test.csproj
+++ b/test/Routine.Test/Routine.Test.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Cache\" />
+  </ItemGroup>
+
 </Project>
