--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -4,6 +4,11 @@
 		<Version>0.9.2</Version>
 		<Authors>inventiv</Authors>
 		<Company>Multinet Teknoloji A.S.</Company>
+        <PackageIcon>logo.png</PackageIcon>
+        <PackageIconUrl />
+        <RepositoryUrl>https://github.com/multinetinventiv/routine.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageProjectUrl>http://routineframework.org</PackageProjectUrl>
 	</PropertyGroup>
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
@@ -21,5 +26,11 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="logo.png">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
 	</ItemGroup>
 </Project>
