--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -4,11 +4,14 @@
 		<Version>0.9.2</Version>
 		<Authors>inventiv</Authors>
 		<Company>Multinet Teknoloji A.S.</Company>
-        <PackageIcon>logo.png</PackageIcon>
+        <PackageIcon>routine-logo.png</PackageIcon>
         <PackageIconUrl />
         <RepositoryUrl>https://github.com/multinetinventiv/routine.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageProjectUrl>http://routineframework.org</PackageProjectUrl>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <Description>Routine is a service framework that can adapt to any coding style.</Description>
+        <PackageTags>rest;service;</PackageTags>
 	</PropertyGroup>
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
@@ -28,7 +31,11 @@
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
 	</ItemGroup>
 	<ItemGroup>
-	  <None Include="logo.png">
+	  <None Include="..\..\docs\routine-logo.png">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
+	  <None Include="..\..\LICENSE">
 	    <Pack>True</Pack>
 	    <PackagePath></PackagePath>
 	  </None>
