--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Version>0.9.2</Version>
@@ -11,7 +11,7 @@
         <PackageProjectUrl>http://routineframework.org</PackageProjectUrl>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <Description>Routine is a service framework that can adapt to any coding style.</Description>
-        <PackageTags>rest service</PackageTags>
+        <PackageTags>rest, service, client</PackageTags>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <Copyright>Copyright (c) 2016 - 2021 inventiv</Copyright>
     </PropertyGroup>
@@ -30,7 +30,7 @@
         </AssemblyAttribute>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
     </ItemGroup>
     <ItemGroup>
         <None Include="..\..\docs\routine-logo.png">
