--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Code Coverage Summary Report
         uses: 5monkeys/cobertura-action@master
         with:
-          path: ${{ github.workspace }}/test/Routine.Test/coverage.cobertura.xml
+          path: test/Routine.Test/coverage.cobertura.xml
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           minimum_coverage: 70
           skip_covered: false
