add debug config for vim

--- a/samples/Routine.Samples.Basic/Routine.Samples.Basic.csproj
+++ b/samples/Routine.Samples.Basic/Routine.Samples.Basic.csproj
@@ -8,4 +8,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove=".vimspector.json" />
+    <Content Remove=".vimspector.json" />
+  </ItemGroup>
+
 </Project>
