add coverage to local test run

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ packages/**/*
 **/_ReSharper.Caches/**/*
 
 /.vs
-/test/Routine.Test.Performance/Properties/launchSettings.json
 
 **/*.sw?
+**/.coverage/*
