--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -20,4 +20,18 @@
         <Using Include="System.Collections" />
     </ItemGroup>
 
+    <PropertyGroup>
+        <Product>Routine</Product>
+        <Version>6.0.0</Version>
+        <Authors>inventiv</Authors>
+        <Company>inventiv</Company>
+        <Copyright>Copyright (c) 2016 - 2022 inventiv</Copyright>
+        <PackageIcon>logo.png</PackageIcon>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageProjectUrl>http://routineframework.org</PackageProjectUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <RepositoryUrl>https://github.com/multinetinventiv/routine.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+    </PropertyGroup>
+
 </Project>
