--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -25,7 +25,7 @@
         <Version>8.0.0</Version>
         <Authors>inventiv</Authors>
         <Company>inventiv</Company>
-        <Copyright>Copyright (c) 2016 - 2024 inventiv</Copyright>
+        <Copyright>Copyright (c) 2016-2024 inventiv</Copyright>
         <PackageIcon>logo.png</PackageIcon>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageProjectUrl>http://routineframework.org</PackageProjectUrl>
